Bug 126823 - Draw/Impress: use defaults from the style for arrow head widths
Summary: Draw/Impress: use defaults from the style for arrow head widths
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Andreas Heinisch
URL:
Whiteboard: target:26.8.0 target:26.2.4
Keywords:
: 127995 143411 163740 (view as bug list)
Depends on:
Blocks: Arrow_Style
  Show dependency treegraph
 
Reported: 2019-08-11 14:12 UTC by hardy
Modified: 2026-04-22 06:58 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
demo odp-file to show the behavior (10.24 KB, application/vnd.oasis.opendocument.presentation)
2019-08-11 14:15 UTC, hardy
Details

Note You need to log in before you can comment on or make changes to this bug.
Description hardy 2019-08-11 14:12:57 UTC
Description:
Here is how to reproduce the behavior:
* Open LibreOffice Impress and create a new empty presentation
* insert an "Arrow" object, e.g. using the toolbar group "lines and arrows" and then pick "Line ends with arrow". Draw this arrow with the mouse from left to right.
* result: a nice arrow from left to right is displayed, so far so good.
* now, in the side pane, go to the "line" properties of this arrow object. The currently displayed line endings are still "none" on BOTH sides. (This is the first thing that seems un-expected to me!)
* change both line endings to something else, for example "small arrow"
* result: a line with two arrow heads is displayed
* BUT: the right arrow head is displayed much BIGGER than the left arrow head. And there is no way (I have tried hard) to create two arrow heads of the same size on this "arrow" object. 
* (The only way to achiev the desired result is to delete the whole arrow object, and to start all over with a "line" object. This works fine then.)

This behavior is very unexpected for me. It forces me to delete my (formatting) work and to redo it all again (if I have the counter-intuitive idea of using a "line" object instead at all...)

This irritating behavior has been in LibreOffice, and before in OpenOffice, for many years. But I couldn't find any open bug report for it any more. That's why I opened this one.

I will attach a simple demo odp-file that easily shows the behavior I described.



Steps to Reproduce:
-

Actual Results:
-

Expected Results:
-


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 hardy 2019-08-11 14:14:41 UTC
I could still observe this in the "fresh" 6.3.0.4 version of LibreOffice.
Comment 2 hardy 2019-08-11 14:15:55 UTC
Created attachment 153293 [details]
demo odp-file to show the behavior

added the demo opd-file
Comment 3 Xisco Faulí 2020-02-18 17:13:06 UTC
Thanks for reporting this issue.
I can't reproduce it in

Version: 7.0.0.0.alpha0+
Build ID: 28d844a589e52abfe62dc66b888e78665221ba28
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

Could you please try to reproduce it with the latest version of LibreOffice from https://www.libreoffice.org/download/libreoffice-fresh/ ?
I have set the bug's status to 'NEEDINFO'. Please change it back to 'UNCONFIRMED' if the bug is still present in the latest version.
Comment 4 hardy 2020-02-18 20:34:38 UTC
I have re-tested this with the current nightly build of LibreOffice, and I still DO see this!

This is the LibreOffice version I used:

Version: 7.0.0.0.alpha0+
Build ID: 7fddb9a1f69a1bac676ad48421256a1ba0274c83
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2020-02-16_19:33:19
Locale: de-DE (de_DE.UTF-8); UI-Language: en-US
Calc: threaded

This is what I observed:

* When I open the attached odp file in Impress, then the lower arrow still has a bigger head at the right end.

* When I create a new presentation and insert a new line object there, then I can still observe the 100% same behavior as described in my original post. In this new version of LO the misbehavior is even more obvious: In the right settings pane, where the line properties are displayed, you can now see that the right arrow head is always set to "nothing", none of the head icons is highlighted.

Have you really followed my instructions in the original report and could not reproduce this? I have seen this for several years now, on many different computers, with Linux and Windows OS, and with many versions of LO.
Comment 5 Regina Henschel 2020-02-19 00:32:23 UTC
The problem is a mismatch of the default width of the arrow to the default width in style "standard".

The default width of the arrow is 300 (1/100th mm) in
https://opengrok.libreoffice.org/xref/core/sd/source/ui/func/fuconrec.cxx?r=1902f1e4#682

The default width in style "standard" is 200 in https://opengrok.libreoffice.org/xref/core/sd/source/core/drawdoc4.cxx?r=4efe996e#156

Calc uses 2mm as default, Writer uses 1,76mm as default, but both only use automatic styles (=direct formatting).

Looking at the mentioned i3908, other places to create a line have to be considered too.
https://bz.apache.org/ooo/show_bug.cgi?id=3908


For me the real problem is not the value of the width, but the fact, that the arrow width is set at all. As long as the user does not apply a direct formatting, in Draw/Impress the defaults from the style should be used.



@hardy: Chose "Line..." from the context menu of the line and set the arrow width to the values you need.
Comment 6 Buovjaga 2020-05-10 13:00:40 UTC
(In reply to Regina Henschel from comment #5)
> For me the real problem is not the value of the width, but the fact, that
> the arrow width is set at all. As long as the user does not apply a direct
> formatting, in Draw/Impress the defaults from the style should be used.

-> NEW
Comment 7 Heiko Tietze 2021-11-30 09:32:12 UTC
*** Bug 143411 has been marked as a duplicate of this bug. ***
Comment 8 QA Administrators 2024-04-13 03:15:01 UTC Comment hidden (obsolete)
Comment 9 hardy 2024-04-13 14:19:45 UTC
I have re-tested with LibreOffice 24.2.2.2, and unfortunatelly this behavior is still present.

Detail on my LO version:
Version: 24.2.2.2 (X86_64) / LibreOffice Community
Build ID: d56cc158d8a96260b836f100ef4b4ef25d6f1a01
CPU threads: 16; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: de-DE (de_DE.UTF-8); UI: en-US
Calc: threaded
Comment 10 Telesto 2025-01-29 13:06:18 UTC
Still present in
Version: 25.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 94afced0195ef824e575176e33c79ca57484cd5c
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL threaded
Comment 11 Andreas Heinisch 2026-03-20 10:52:47 UTC
*** Bug 163740 has been marked as a duplicate of this bug. ***
Comment 12 Andreas Heinisch 2026-03-23 08:45:19 UTC
*** Bug 127995 has been marked as a duplicate of this bug. ***
Comment 13 Commit Notification 2026-03-23 18:43:23 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/715004c51b1ffa74e762d88fd551f3a59baaf2ee

tdf#96454, tdf#126823 - Retrieve default arrow sizes for start/end widths

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2026-03-24 06:37:28 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ca4f6e7159c1b46c99365cd62028182d3b03a04c

tdf#126823 - Remove explicit arrow sizes for start/end widths

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2026-04-22 06:49:37 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/d90ad05c466d392ca4a222c8b5dafdf58af769e1

tdf#96454, tdf#126823 - Retrieve default arrow sizes for start/end widths

It will be available in 26.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Commit Notification 2026-04-22 06:58:45 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/e3789067a561ca55db9663e0a3c8c5d12b36c008

tdf#126823 - Remove explicit arrow sizes for start/end widths

It will be available in 26.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.