tdf#126823 - Remove explicit arrow sizes for start/end widths

Change-Id: Ic0c30a2d580d652533dae053b63db7b9ca47be90
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/202533
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/204051